--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"lint": "eslint .",
 		"demo": "tsx src/demo.ts"
@@ -16,6 +18,7 @@
 	"devDependencies": {
 		"@eslint/js": "9.30.1",
 		"@types/node": "^16.11.6",
+		"@types/sql.js": "^1.4.9",
 		"esbuild": "0.25.5",
 		"eslint-plugin-obsidianmd": "0.1.9",
 		"globals": "14.0.0",
@@ -23,9 +26,12 @@
 		"tslib": "2.4.0",
 		"tsx": "^4.21.0",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "8.35.1"
+		"typescript-eslint": "8.35.1",
+		"vitest": "^1.6.1"
 	},
 	"dependencies": {
-		"obsidian": "latest"
+		"diff-match-patch-ts": "^0.8.0",
+		"obsidian": "latest",
+		"sql.js": "^1.13.0"
 	}
 }
