--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
 main.js
+dist
 
 # Exclude sourcemaps
 *.map
@@ -23,3 +24,4 @@ data.json
 
 # Exclude test data
 data
+
